<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="84dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/fake_action_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"

                    android:background="@color/colorAccent"
                    android:paddingHorizontal="16dp"
                    android:paddingBottom="32dp">

                <TextView
                        android:id="@+id/search_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_label"
                        android:textColor="@color/colorWhite"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="54dp"/>

                <LinearLayout
                        android:id="@+id/search_container"
                        android:layout_width="294dp"
                        android:layout_height="48dp"

                        app:layout_constraintTop_toBottomOf="@id/search_label"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginVertical="18dp"

                        android:background="@drawable/search_background"
                        android:orientation="horizontal"
                        android:elevation="0dp">

                    <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="82"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="12dp"
                            android:hint="@string/search"
                            android:textColorHint="@color/colorGrayHint"
                            android:background="@color/colorTransparent"/>

                    <ImageButton
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="18"
                            android:src="@drawable/ic_search_white"
                            android:background="@drawable/search_backgroung_green"
                            android:layout_margin="4dp"/>

                </LinearLayout>

                <ImageButton
                        android:id="@+id/barcode"
                        android:layout_width="48dp"
                        android:layout_height="48dp"

                        app:layout_constraintTop_toTopOf="@id/search_container"
                        app:layout_constraintBottom_toBottomOf="@id/search_container"
                        app:layout_constraintEnd_toEndOf="parent"


                        android:background="@drawable/search_background"
                        android:src="@drawable/ic_barcode"
                        android:padding="6dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/fake_action_bar"
                android:layout_marginTop="28dp"
                android:paddingHorizontal="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"/>

        <TextView
                android:id="@+id/label_limited_offer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/rv_categories"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="54dp"
                android:paddingHorizontal="16dp"

                android:text="@string/limited_offer"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:textStyle="bold"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_limited_offer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/label_limited_offer"
                android:layout_marginTop="26dp"
                android:paddingHorizontal="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"/>


        <TextView
                android:id="@+id/label_best_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/rv_limited_offer"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="54dp"
                android:paddingHorizontal="16dp"

                android:text="@string/best_price"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:textStyle="bold"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_best_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/label_best_price"
                android:layout_marginTop="26dp"
                android:paddingHorizontal="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>